SUBDIRS = src

themesdefdir   = @THEMES_DIR@/default
themesdef_DATA = themes/default/no_cover.png \
	themes/default/intro.svg \
	themes/default/songs_bg.svg \
	themes/default/songs_order.svg \
	themes/default/songs_song.svg \
	themes/default/sing_bg.svg \
	themes/default/sing_lyricscurrent.svg \
	themes/default/sing_lyricshighlight.svg \
	themes/default/sing_lyricsnext.svg \
	themes/default/sing_p1box.svg \
	themes/default/sing_p1score.svg \
	themes/default/sing_p2box.svg \
	themes/default/sing_p2score.svg \
	themes/default/sing_progressfg.svg \
	themes/default/sing_timetxt.svg

themeslimadir   = @THEMES_DIR@/lima
themeslima_DATA = themes/lima/no_cover.png \
	themes/lima/intro.svg \
	themes/lima/songs_bg.svg \
	themes/lima/songs_order.svg \
	themes/lima/songs_song.svg \
	themes/lima/sing_bg.svg \
	themes/lima/sing_lyricscurrent.svg \
	themes/lima/sing_lyricshighlight.svg \
	themes/lima/sing_lyricsnext.svg \
	themes/lima/sing_p1box.svg \
	themes/lima/sing_p1score.svg \
	themes/lima/sing_p2box.svg \
	themes/lima/sing_p2score.svg \
	themes/lima/sing_progressfg.svg \
	themes/lima/sing_timetxt.svg

includes = include/audio.h \
	include/video.h \
	include/cairotosdl.h \
	include/pitch_graph.h \
	include/screen.h \
	include/screen_sing.h \
	include/singleton.h \
	include/theme.h \
	include/cairosvg.h \
	include/record.h \
	include/screen_intro.h \
	include/screen_songs.h \
	include/songs.h \
	include/sdl_gl.h

EXTRA_DIST = $(themesdef_DATA) $(themeslima_DATA) $(includes)
