SUBDIRS = src docs data themes

includes = include/audio.h \
	include/video.h \
	include/cairotosdl.h \
	include/pitch_graph.h \
	include/configuration.h \
	include/screen.h \
	include/screen_sing.h \
	include/singleton.h \
	include/theme.h \
	include/cairosvg.h \
	include/record.h \
	include/screen_intro.h \
	include/screen_songs.h \
	include/screen_practice.h \
	include/screen_configuration.h \
	include/songs.h \
	include/lyrics.h \
	include/sdl_gl.h \
	include/video_driver.h

EXTRA_DIST = $(themesdef_DATA) $(themeslima_DATA) $(includes)
